/* (c) https://github.com/MontiCore/monticore */
plugins {
  id "de.monticore.generator"
  id "jacoco"
}

description = 'MontiCore Generator Main Integration Test'

ext.grammarDir = 'src/main/grammars'

configurations {grammar}

sonarqube {
  skipProject = true
}

dependencies {
  implementation project(':monticore-runtime')
  implementation project(':monticore-grammar')
//  implementation project (':monticore-generator')
  testImplementation testFixtures(project(':monticore-runtime'))
  testImplementation "org.junit.jupiter:junit-jupiter-api:$junit_version"
  testImplementation "org.junit.jupiter:junit-jupiter-params:$junit_version"
  testImplementation "org.junit.jupiter:junit-jupiter-engine:$junit_version"
  testRuntimeOnly "org.junit.platform:junit-platform-launcher:$junit_version"
  grammar (project(path: ':monticore-grammar')){
    capabilities {
      requireCapability("de.monticore:monticore-grammar-grammars")
    }
  }
}


if (!hasProperty('buildProfile')) ext.buildProfile = 'default'  // chooses the profile

apply from: "profile-${buildProfile}.gradle"  // includes the corresponding build file

tasks.withType(JavaCompile) {
  sourceCompatibility = JavaVersion.VERSION_21
  targetCompatibility = JavaVersion.VERSION_21
  options.warnings = false
  options.encoding = 'UTF-8'
}

compileJava {
  dependsOn project.collect { it.tasks.withType(MCTask) }
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

test {
  useJUnitPlatform()
  testLogging {
    showStandardStreams = true
  }
  
}
